      the "Get Software" section (using Matthew McGowan's 
      BackForwardButton, many thanks!).  (LP: #423754)
  * po/POTFILES.in:
    - add softwarecenter/backend/channel.py 
  * data/ui/SoftwareCenter.ui:
    - in "View" menu, change "Applications" to "Software" (LP: #530377) 
  * softwarecenter/view/installedpane.py:
    - hide searchentry field in details view (LP: 528121) 

 -- Gary Lasker <gary.lasker@canonical.com>  Wed, 03 Mar 2010 10:11:15 -0500

software-center (1.1.15) lucid; urgency=low

  [ Michael Vogt ]
  * softwarecenter/view/widgets/animatedimage.py:
    - fix crash when image property is not set
  * updated po/th.po:
    - thanks to Sira Nokyoonhtong
  * data/featured.menu.in: updated, based on 
    https://lists.ubuntu.com/archives/ubuntu-desktop/2010-March/002448.html

  [ Gary Lasker ]
  * data/ui/SoftwareCenter.ui:
    - tweak default window width to restore four-column view
      in the categories screen (LP: #528082)
  * softwarecenter/view/channelpane.py:
    - make status bar text for individual channel views
      consistent with that in the "Get Software" section
      (LP: #528055)
  * softwarecenter/view/availablepane.py:
    - don't show search entry in app details view (LP: #528121)
    - fix missing status text at startup (LP: #528040) 
    - fix intermittent attribute error when searching
      from the main category screen (LP: #524209)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 01 Mar 2010 14:43:54 +0100

software-center (1.1.14) lucid; urgency=low

  * softwarecenter/view/:
    - add a bunch of missing atk description to the widgets
  * softwarecenter/view/widgets/pathbar2.py:
    - make the PathParts subclasses of atk.Objects and add atk
      descriptions/parent relations
  * debian/control:
    - add missing po4a b-d

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 24 Feb 2010 20:56:13 +0100

software-center (1.1.13) lucid; urgency=low

  [ Michael Vogt ]
  * data/featured.menu.in:
    - add scribus, blender